--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "cloudinary": "^2.8.0",
     "gsap": "^3.13.0",
     "next": "15.5.6",
+    "next-cloudinary": "^6.16.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-sketch-canvas": "^6.2.0",
