--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gsap": "^3.13.0",
     "next": "15.5.6",
     "next-cloudinary": "^6.16.2",
+    "openai": "^6.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-sketch-canvas": "^6.2.0",
